--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>JS Builds with Gulp + Browserify</title>
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
     <div id="app"></div>
 
-    <script src="scripts/bundle.js"></script>
+    <script src="/scripts/bundle.js"></script>
   </body>
 </html>
