--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>JS Builds with Gulp + Browserify</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <!-- inject:css -->
+    <!-- endinject -->
   </head>
   <body>
     <div id="app"></div>
 
-    <script src="/scripts/bundle.js"></script>
+    <!-- inject:js -->
+    <!-- endinject -->
   </body>
 </html>
